tests/gabc-dump/should-fail/bad-unicode.gabc
name: bad unicode;
%%
(c4) Š•abc(def) úMabc(def)
